Updated all Panama FFM feature APIs to JDK 21/22 level